k8s/5-ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmarker-api-ingress    # Ingress 이름
  annotations:
    # 요청 경로를 백엔드 서비스로 보낼 때 경로를 재작성(rewrite)하도록 설정
    # 예: /bookmarker-api/foo -> /foo
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # path에 정규표현식 사용을 활성화
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  # HTTP 요청 규칙 정의
  - http:
      paths:
      # 요청을 전달할 백엔드 서비스 정의
      - backend:
          service:
            name: bookmarker-api-svc     # 서비스 이름
            port:
              number: 8080               # 서비스 포트
        # 클라이언트 요청 경로 패턴
        # /bookmarker-api로 시작하는 요청을 매칭
        # (/|$) : /로 끝나거나 끝나는 경우
        # (.*) : 나머지 경로를 캡처해서 rewrite-target에서 $2로 사용
        path: /bookmarker-api(/|$)(.*)
        # pathType 설정, ImplementationSpecific: 구현체(Nginx 등) 기준으로 해석
        pathType: ImplementationSpecific
