k8s/6-ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookmarker-ui-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: bookmark-ui-svc
            port:
              number: 3000
        # "/"로 들어오는 모든 요청에 대해
        path: /
        # pathType: Prefix → 경로 접두사 기반 매칭
        pathType: Prefix
